@@ -7,3 +7,7 @@
 2/6/2023
     I jsut started the assignment and at first I was having difficulties with the scanf. It would'nt allow me to enter an input, so i went to the help room to see if they knew anything about it. They could'nt solve it and eventually I ran the program in my terminal and it worked perfectly fine there. I also figured out how to use git. I started to think of ideas on how I should tackle this assignment and I created a global structure, so we can save the previous end of the road.
     
+2/8/2023
+    This project took me all day to finsih up, I had to go to help hours to seek for help and I would spend most of my time trying
+    to figure out how to save the previous worlds. Once I figured that out I decided to work on connecting each world once they
+    met eachother. This was the most difficult so far.
